# lazynews

./: Cargo.toml  README.md  dist-workspace.toml  todo.txt
.github/workflows/: ci.yml  release.yml
src/: app.rs  comments_nav.rs  event.rs  hn.rs  input.rs  main.rs  ui.rs
